<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/logInlayout"
       android:background="@drawable/backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="#a0000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_60sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        app:cardPreventCornerOverlap="false">

                        <ImageView
                            android:id="@+id/ivLogo"
                            android:src="@drawable/applogo"

                            android:layout_width="140dp"
                            android:layout_height="140dp"/>
                    </androidx.cardview.widget.CardView>

                    <com.efunhub.groceryshop.widget.CustomTextView
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_large"
                        app:fontFamily="@string/font_graphik_medium"
                        app:textAllCaps="true" />

                    <androidx.cardview.widget.CardView
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-30dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/colorWhite"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardElevation="@dimen/_3sdp"
                        app:cardUseCompatPadding="true">

                        <com.efunhub.groceryshop.widget.CustomEditText
                            android:id="@+id/edtLoginMobile"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@null"
                            android:fontFamily="@string/font_regular"
                            android:hint="@string/str_mobile"
                            android:imeOptions="actionDone"
                            android:paddingEnd="@dimen/_20sdp"
                            android:paddingLeft="@dimen/_20sdp"
                            android:paddingRight="@dimen/_20sdp"
                            android:paddingStart="@dimen/_20sdp"
                            android:singleLine="true"
                            android:maxLength="10"
                            android:inputType="number"
                            android:textSize="@dimen/font_regular"
                            app:fontFamily="@string/font_regular" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@color/colorWhite"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardElevation="@dimen/_3sdp"
                        app:cardUseCompatPadding="true">

                        <com.efunhub.groceryshop.widget.CustomEditText
                            android:id="@+id/edtLoginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@null"
                            android:fontFamily="@string/font_regular"
                            android:hint="@string/str_password"
                            android:imeOptions="actionDone"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingLeft="@dimen/_20sdp"
                            android:paddingEnd="@dimen/_20sdp"
                            android:paddingRight="@dimen/_20sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/font_regular"
                            app:fontFamily="@string/font_regular" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/colorWhite"
                        android:fadingEdgeLength="0dp"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardElevation="@dimen/_3sdp"
                        app:cardUseCompatPadding="true">

                        <com.efunhub.groceryshop.widget.CustomButton
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@drawable/selector_button"
                            android:fadingEdgeLength="0dp"
                            android:text="@string/str_sign_in"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/font_regular"
                            app:fontFamily="@string/font_regular" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvPgBar"
                        android:shape="ring"
                        android:padding="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:fadingEdgeLength="0dp"
                        android:visibility="gone"
                        app:cardCornerRadius="@dimen/_28sdp"
                        app:cardElevation="@dimen/_3sdp"
                        app:cardUseCompatPadding="true">

                        <ProgressBar
                            android:layout_margin="@dimen/_5sdp"
                            android:id="@+id/pgBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </androidx.cardview.widget.CardView>




                    <com.efunhub.groceryshop.widget.CustomTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="Forgot Password?"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_large"
                        app:fontFamily="@string/font_graphik_medium" />


                    <com.efunhub.groceryshop.widget.CustomTextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/str_dont_have_account"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_large"
                        app:fontFamily="@string/font_graphik_medium" />


                    <com.efunhub.groceryshop.widget.CustomTextView
                        android:id="@+id/tvSkip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/str_skip"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_extra_large"
                        app:fontFamily="@string/font_graphik_medium" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>



    </RelativeLayout>
</layout>