<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/splash_image"
        android:orientation="vertical"
        tools:context=".activities.RegistrationActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B5000000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_60sdp"
                    app:cardPreventCornerOverlap="false">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/applogo" />
                </androidx.cardview.widget.CardView>

                <com.efunhub.groceryshop.widget.CustomTextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivRegisterLogo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="Create Account"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    app:fontFamily="@string/font_regular" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp"
                    app:cardUseCompatPadding="true">

                    <com.efunhub.groceryshop.widget.CustomEditText
                        android:id="@+id/etNameProfile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@null"
                        android:fontFamily="@string/font_regular"
                        android:hint="@string/str_full_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/font_regular"
                        app:fontFamily="@string/font_regular" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp"
                    app:cardUseCompatPadding="true">

                    <com.efunhub.groceryshop.widget.CustomEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@null"
                        android:fontFamily="@string/font_regular"
                        android:hint="@string/str_email"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/font_regular"
                        app:fontFamily="@string/font_regular" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp"
                    app:cardUseCompatPadding="true">

                    <com.efunhub.groceryshop.widget.CustomEditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@null"
                        android:fontFamily="@string/font_regular"
                        android:hint="@string/str_mobile"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/font_regular"
                        app:fontFamily="@string/font_regular" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp"
                    app:cardUseCompatPadding="true">

                    <com.efunhub.groceryshop.widget.CustomEditText
                        android:id="@+id/edtCountryCode"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@null"
                        android:fontFamily="@string/font_regular"
                        android:hint="@string/str_countrycode"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/font_regular"
                        app:fontFamily="@string/font_regular" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/colorWhite"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_3sdp"
                    app:cardUseCompatPadding="true">

                    <com.efunhub.groceryshop.widget.CustomEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@null"
                        android:fontFamily="@string/font_regular"
                        android:hint="@string/str_password"
                        android:imeOptions="actionDone"
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/font_regular"
                        app:fontFamily="@string/font_regular" />
                </androidx.cardview.widget.CardView>


                <com.efunhub.groceryshop.widget.CustomButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_below="@+id/rlRegister"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="@dimen/_18sdp"
                    android:background="@drawable/selector_button"
                    android:fontFamily="sans-serif"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:fontFamily="@string/font_regular" />

                <com.efunhub.groceryshop.widget.CustomTextView
                    android:id="@+id/tvAlreadyHaveAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnRegister"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Already have an account? Sign In"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_large"
                    app:fontFamily="@string/font_regular" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>